--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "nx build python-poetry",
-    "test": "nx test python-poetry",
-    "lint": "nx workspace-lint && nx lint python-poetry",
-    "e2e": "nx e2e python-poetry"
+    "build": "nx build fastapi",
+    "test": "nx test fastapi",
+    "lint": "nx workspace-lint && nx lint fastapi",
+    "e2e": "nx e2e fastapi"
   },
   "private": true,
   "devDependencies": {
@@ -21,12 +21,14 @@
     "@nrwl/workspace": "12.9.0",
     "@types/jest": "26.0.24",
     "@types/node": "14.14.33",
+    "@types/shelljs": "^0.8.9",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "27.0.3",
     "prettier": "^2.3.1",
+    "shelljs": "^0.8.4",
     "ts-jest": "27.0.3",
     "tslib": "^2.0.0",
     "typescript": "~4.3.5"
