--- a/packages/fastapi/package.json
+++ b/packages/fastapi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nx-python-poetry/python-poetry",
+  "name": "nx-python-fastapi",
   "version": "0.0.1",
   "main": "src/index.js",
   "generators": "./generators.json",
