--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "nx build fastapi",
     "test": "nx test fastapi",
     "lint": "nx workspace-lint && nx lint fastapi",
-    "e2e": "nx e2e fastapi"
+    "e2e": "nx e2e fastapi",
+    "commit-msg": "node tools/scripts/verifyCommit.js",
+    "prepare": "husky install"
   },
   "private": true,
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@typescript-eslint/parser": "~4.28.3",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
+    "husky": "^7.0.1",
     "jest": "27.0.3",
     "prettier": "^2.3.1",
     "shelljs": "^0.8.4",
