--- a/packages/fastapi/package.json
+++ b/packages/fastapi/package.json
@@ -1,11 +1,12 @@
 {
   "name": "nx-python-fastapi",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "src/index.js",
   "generators": "./generators.json",
   "executors": "./executors.json",
   "peerDependencies": {
-    "@nrwl/devkit": "^12.9.0"
+    "@nrwl/devkit": "^12.9.0",
+    "shelljs": "^0.8.4"
   },
   "repository": {
     "type": "git",
