--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   },
   "private": true,
   "devDependencies": {
-    "@nrwl/cli": "12.9.0",
-    "@nrwl/devkit": "12.9.0",
-    "@nrwl/eslint-plugin-nx": "12.9.0",
-    "@nrwl/jest": "12.9.0",
-    "@nrwl/linter": "12.9.0",
-    "@nrwl/node": "12.9.0",
-    "@nrwl/nx-plugin": "^12.9.0",
-    "@nrwl/tao": "12.9.0",
-    "@nrwl/workspace": "12.9.0",
+    "@nrwl/cli": "12.10.0",
+    "@nrwl/devkit": "12.10.0",
+    "@nrwl/eslint-plugin-nx": "12.10.0",
+    "@nrwl/jest": "12.10.0",
+    "@nrwl/linter": "12.10.0",
+    "@nrwl/node": "12.10.0",
+    "@nrwl/nx-plugin": "^12.10.0",
+    "@nrwl/tao": "12.10.0",
+    "@nrwl/workspace": "12.10.0",
     "@types/jest": "26.0.24",
     "@types/node": "14.14.33",
     "@types/shelljs": "^0.8.9",
-    "@typescript-eslint/eslint-plugin": "~4.28.3",
-    "@typescript-eslint/parser": "~4.28.3",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
     "chalk": "^4.1.2",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
@@ -34,7 +34,7 @@
     "prettier": "^2.3.1",
     "shelljs": "^0.8.4",
     "ts-jest": "27.0.3",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "typescript": "~4.3.5"
   },
   "dependencies": {
